--- a/2105-DCMS/.classpath
+++ b/2105-DCMS/.classpath
@@ -11,5 +11,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/DCMS-2105/jgoodies-common-1.2.0.jar"/>
+	<classpathentry kind="lib" path="/DCMS-2105/mysql-connector-j-9.0.0.jar"/>
+	<classpathentry kind="lib" path="/DCMS-2105/jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
