--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,9 @@
 	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="lib" path="jgoodies-common-1.2.0.jar"/>
 	<classpathentry kind="lib" path="mysql-connector-j-9.0.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AcerN/Downloads/jasperreports-metadata-6.21.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AcerN/Downloads/jasperreports-6.21.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/AcerN/Downloads/jasperreports-7.0.1-project.zip"/>
+	<classpathentry kind="lib" path="jasperreports-functions-6.21.4.jar"/>
 	<classpathentry kind="output" path="2105-DCMS/bin"/>
 </classpath>
